# nse-option-pricing

./: README.md  package-lock.json  package.json
backend/: CMakeLists.txt  monteCarloServer.ts  package-lock.json  package.json  server.ts  tsconfig.json
backend/cpp/: compare_models.cpp  compute_greeks.cpp  monte_carlo.cpp  option_pricing.cpp
frontend/app/: page.tsx
frontend/components/: Greeks.tsx  OptionComparison.tsx  Optionchain.tsx
frontend/utils/: binomialTree.ts  computeGrees.ts  computeMonteCarlo.ts  computeOptionPrice.ts  fetchLocalOptionChaindata.ts  fetchNSEData.ts  optionComparison.ts
